<resources>
    <string name="app_name">SoundCloud</string>
    <string name="nav_name_user">Vu Minh Duc</string>
    <string name="nav_user_image_avatar">Avatar</string>
    <string name="nav_home">Home</string>
    <string name="nav_search">Search</string>
    <string name="nav_favorite">Favorite</string>
    <string name="nav_download">Download</string>
    <string name="nav_music">Music</string>
    <string name="nav_playlist">Playlist</string>
    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="navigation_drawer_close">Close Drawer</string>
    <string name="number_one">1</string>
    <string name="search_view_query_text">Query</string>
    <string name="search_view_height_suggestion">0.5dp</string>
    <string name="bias_suggestion_view">0.13</string>
    <string name="bias_avatar_navigation">0.5</string>
    <string name="bias_text_view_name_navigation">0.45</string>
    <string name="tool_bar_home">Home</string>
    <string name="splash_bias_progress_bar">0.7</string>
    <string name="max_length_text_details">20</string>
    <string name="length_player">32</string>
    <string name="discover_all_music">All Music </string>
    <string name="discover_all_audio">All Audio </string>
    <string name="discover_alternative_rock">Alternative Rock </string>
    <string name="discover_ambient">Ambient</string>
    <string name="discover_classical">Classical </string>
    <string name="discover_country">Country </string>
    <string name="play_loop_one">Loop One Mode On</string>
    <string name="play_loop_off">Loop Off</string>
    <string name="play_loop_all">Loop All Mode On</string>
    <string name="play_shuffle_on">Shuffle Mode On</string>
    <string name="play_shuffle_off">Shuffle Mode Off</string>
    <string name="play_favorite">Add to Favorite</string>
    <string name="play_un_favorite">Un Favorite</string>
    <string name="play_down_load">Download in progress</string>
    <string name="play_complete">Download Complete</string>
    <string name="notify_max_length_name">16</string>
    <string name="notify_singer">Unknow</string>
    <string name="notifty_max_line_name">1</string>
    <string name="bottom_notify_max_name">40</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_discover">Discover</string>
    <string name="title_download">Download</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_search">Search</string>
    <string name="favorite_bias_025">0.25</string>
    <string name="favorite_bias_075">0.75</string>
    <string name="navigation_error">Error, please add track</string>
    <string name="favorite_dialog_title">Remove Favorite</string>
    <string name="favorite_dialog_messsage">Bạn có muốn xoá không?</string>
    <string name="favorite_dialog_possitive">OK</string>
    <string name="favorite_dialog_negative">NO</string>
    <string name="favorite_favorite_remove">Xoá thành công</string>
    <string name="download_start">Downloading</string>
</resources>
