<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_item_genre"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageview_avatar"
        android:layout_width="@dimen/dp_96"
        android:layout_height="@dimen/dp_96"
        android:layout_margin="@dimen/dp_8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_image_place_holder"/>

    <TextView
        android:id="@+id/textview_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_16"
        android:ellipsize="end"
        android:gravity="left"
        android:maxLength="@string/max_length_text_details"
        android:textColor="@color/color_black_alpha_222"
        android:textSize="@dimen/sp_16"
        app:layout_constraintStart_toEndOf="@+id/imageview_avatar"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textview_singer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_8"
        android:gravity="left"
        android:textColor="@color/color_primary_dark"
        android:textSize="@dimen/sp_14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageview_avatar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="@string/bias_avatar_navigation"/>

    <TextView
        android:id="@+id/textview_created"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_16"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:textColor="@color/color_primary_dark"
        android:textSize="@dimen/sp_14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageview_avatar"
        app:layout_constraintTop_toBottomOf="@+id/textview_singer"
        app:layout_constraintVertical_bias="@string/number_one"/>

    <TextView
        android:id="@+id/textview_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_8"
        android:textColor="@color/color_primary_dark"
        android:textSize="@dimen/sp_14"
        app:layout_constraintBottom_toTopOf="@+id/imageview_favorite_genre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/imageview_favorite_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_8"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="@string/number_one"
        app:layout_constraintStart_toEndOf="@+id/textview_created"
        app:srcCompat="@drawable/ic_un_favorite"/>

</android.support.constraint.ConstraintLayout>
